can make a .exe fiel on main computer...

--- a/plot.ini
+++ b/plot.ini
@@ -7,4 +7,5 @@ xlabel: // x axis label
 ylabel: // yaxis label
 color: // lets stick to simple red, green, blue, etc. for now
 marker: // number that represents kind of marker. CIrcle, box, diamond...
+output_locatoin: // output loaction of the .png
 
